--- a/style.css
+++ b/style.css
@@ -1,153 +1,84 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    box-sizing: content-box;
-    font-family: 'roboto' , sans-serif ;
+input{
+    display: block;
+    width:500px;
+    height:50px;
+    margin: auto;
+    outline: none;
 }
-.ToDoApp{
-    width:50%;
-    min-width: 300px;
+
+.keyboard{
+    display: block;
+    margin: auto;
+    width: 900px;
     height: auto;
-    position:absolute;
-    left: 50%;
-    top:50%;
-    transform: translate(-50% , -50%);
-    border:1px solid #000;
-    border-radius:10px;
-    overflow: hidden;
+    background-color: #13181a;
+    border-radius: 10px;
+    padding: 40px;
 }
-h2{
-    width: 100%;
-    text-align: center;
-    background-color: blue;
-    color: #eee;
-    padding: 10px 0;
-}
-.section{
-    margin-top: 20px;
+.buttons {
+    height: 100%;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    gap: 7px;
 }
-.section form{
-    width: 50%;
-    display: flex;
-    justify-content: space-evenly;
+.buttons .line{
+    display: inherit;
+    gap: inherit;
+    border-radius: 7px;
 }
-.section form .inputArea{
-    width: 70%;
-    min-width: 200px;
-    height: 30px;
-    text-indent: 3px;
-    border-radius: 3px;
-    border: 1px solid;
-    outline: none;
+.buttons .line button{
+    width: 50px;
+    height: 50px;
+    font-size: 16px;
+    box-shadow: 3px 3px 3px #71D4FE  , 
+                -3px -3px 3px #141be8 ;
+    color: #71D4FE;
+    background-color: transparent;
+    margin: 3px;
+    border-radius: 7px;
+    position: relative;
+    font-weight:bold;
 }
-
-.section form .addButton{
-    border-radius: 3px;
-    outline: none;
-    border: none ;
-    box-shadow: none ;
-    background-color: #30B309 ;
-    color: #ffffff ;
-    width: 25%;
-    min-width: 50px;
-    height: 30px;
-    cursor: pointer;
-    margin: 0 5px;
-}
-.section .listTodo{
-    width: 50%;
-    min-width: 250px;
-    display: grid;
-    grid-template-columns: repeat(3, calc(100% / 3));
-    align-self:flex-start;
-    justify-content: space-around;
-    cursor: pointer;
-    margin: 20px 20px;
-
-}
-.section .listTodo label {
-    padding:10px 0;
-    text-align: center;
-    border-radius: 5px;
-    cursor: pointer;
+.buttons .line button:active,
+.buttons .line  .click{
+    box-shadow: 0px 3px 3px  rgb(76, 0, 254);
 }
 
-.section .listTodo label:hover {
-    background-color: #1212B3;
-    color: #ffffff;
-}
-.section .listTodo label input{
-    display: none;
-}
-
-.section .listTodo label:has(input[name = "active"]:checked){ 
-    background-color: rgb(0, 0, 255);
-    color: #ffffff;
-}
-
-.todoListSection{
-    width: 94%;
-}
-
-.todoListSection ul{
-    list-style-type: none;
-}
-
-
-.todoListSection ul li{
-    width: 100%;
-    height: 35px;
-    border-radius: 5px;
-    background-color: rgb(230, 230, 230);
-    display:flex;
-    align-items: center;
-    cursor: pointer;
-    margin: 10px 0;
-    overflow: hidden;
-
-}
-.todoListSection ul li .toDoSection {
-    width: 95%;
-    line-height: 35px;
-}
-.todoListSection ul li .toDoSection p{
-    display: flex;
-    align-items: center;
-}
-.todoListSection ul li .toDoSection p[data-check = "false"]::before{
-    content: "";
-    width: 13px;
-    height: 13px;
+.buttons .line button[value="space"]{
+    width:220px;
     display: inline-block;
-    border: 1px solid;
-    margin: -2px 5px;
-    border-radius: 2px;
-}
-.todoListSection ul li .toDoSection p[data-check = "true"]::before{
-    content: "\f00c";
-    font-family: "Font Awesome 5 Free";
-    font-weight: 900;
-    font-size: 11px;
-    width: 13px;
-    height: 13px;
-    border: 1px solid #000 ;
-    margin: 0 5px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 2px;
-    background-color: #909541;
-    color: #eee;
+    position: relative;
+    top: 6px;
 }
 
-.todoListSection ul li .remove{
-    margin: 0 5px;
+
+.BACK,
+.CAPS,
+.ENTER,
+.SHIFT,
+.TAB,
+.ESC{
+    text-transform: uppercase !important;
 }
-.todoListSection ul li .remove:hover{
-    color:#FFA20D
+
+.BACK{
+    width: 75px !important;
 }
+
+.TAB,
+.CAPS{
+    width: 75px !important;
+}
+.ENTER{
+    width: 92px !important;
+}
+
+.SHIFT{
+    width: 125px !important;
+}
+
+.active{
+    background-color: #141be8 !important;
+}
+
 
